--- a/frontend/repl/src/styles/App.css
+++ b/frontend/repl/src/styles/App.css
@@ -47,3 +47,21 @@
   font-size: 25px;
   line-height: 1.5;
 }
+
+.fade-enter {
+  opacity: 0.01;
+}
+
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 300ms ease-in;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
