--- a/frontend/repl/src/styles/LoginStyle.css
+++ b/frontend/repl/src/styles/LoginStyle.css
@@ -1,25 +1,30 @@
 /* LoginPage.css */
-
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #e9e2dc; /* Set your desired background color */
+}
 .login-container {
-  background-color: #ffffff;
+  background-color: #faf1e8;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
+  max-width: 400px; /* Set a maximum width for the container */
+  margin: 0 auto; /* Center the container horizontally */
+  transform: translate(0px, 200px);
 }
-
 .input-field {
   width: 100%;
-  padding: 10px;
+  height: 30px;
   margin: 10px 0;
-  border: 1px solid #ccc;
+  border: 1px solid #dbcfc3;
   border-radius: 4px;
 }
-
 .login-button,
 .google-login-button,
 .register-button {
-  background-color: #3498db;
+  background-color: #b98936;
   color: #fff;
   padding: 10px 20px;
   font-size: 16px;
@@ -34,11 +39,16 @@
 }
 
 .register-button {
-  background-color: #27ae60;
+  background-color: #bb721f;
 }
 
 .login-button:hover,
 .google-login-button:hover,
 .register-button:hover {
-  background-color: #2980b9;
+  background-color: #e3ad61;
+}
+
+/* Add padding to labels */
+label {
+  padding: 5px;
 }
