--- a/frontend/repl/src/styles/LoginStyle.css
+++ b/frontend/repl/src/styles/LoginStyle.css
@@ -2,18 +2,20 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #e9e2dc; /* Set your desired background color */
+  background-color: #f1dabf; /* Almond as the desired background color */
 }
+
 .login-container {
   background-color: #faf1e8;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
-  max-width: 400px; /* Set a maximum width for the container */
-  margin: 0 auto; /* Center the container horizontally */
+  max-width: 400px;
+  margin: 0 auto;
   transform: translate(0px, 200px);
 }
+
 .input-field {
   width: 100%;
   height: 30px;
@@ -21,10 +23,11 @@ body {
   border: 1px solid #dbcfc3;
   border-radius: 4px;
 }
+
 .login-button,
 .google-login-button,
 .register-button {
-  background-color: #b98936;
+  background-color: #e45a42; /* Coral as the button background color */
   color: #fff;
   padding: 10px 20px;
   font-size: 16px;
@@ -35,17 +38,17 @@ body {
 }
 
 .google-login-button {
-  background-color: #dd4b39;
+  background-color: #362417; /* Dark Chocolate as the Google login button background color */
 }
 
 .register-button {
-  background-color: #bb721f;
+  background-color: #f1dabf; /* Almond as the register button background color */
 }
 
 .login-button:hover,
 .google-login-button:hover,
 .register-button:hover {
-  background-color: #e3ad61;
+  background-color: #444449; /* Charcoal as the hover color */
 }
 
 /* Add padding to labels */
