--- a/frontend/repl/src/styles/RegisterPage.css
+++ b/frontend/repl/src/styles/RegisterPage.css
@@ -2,21 +2,22 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #e9e2dc; /* Set your desired background color */
+  background-color: #f1dabf; /* Almond as the desired background color */
 }
+
 .register-container {
   background-color: #faf1e8;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
-  max-width: 400px; /* Set a maximum width for the container */
-  margin: 0 auto; /* Center the container horizontally */
+  max-width: 400px;
+  margin: 0 auto;
   transform: translate(0px, 200px);
 }
 
 .input-field {
-  width: calc(100%); /* Adjust the width to account for padding on both sides */
+  width: calc(100%);
   height: 30px;
   margin: 10px 0;
   border: 1px solid #dbcfc3;
@@ -25,24 +26,24 @@ body {
 
 .register-button,
 .back-button {
-  background-color: #e69b31;
+  background-color: #e45a42; /* Coral as the button background color */
   color: #fff;
   padding: 10px 20px;
   font-size: 16px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  margin-top: 10px; /* Add margin between the buttons */
-  display: block; /* Make the buttons block-level elements */
+  margin-top: 10px;
+  display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
 .back-button {
-  background-color: #e15033;
+  background-color: #362417; /* Dark Chocolate as the back button background color */
   margin-top: 10px;
 }
 
 .back-button:hover {
-  background-color: #f6daa3;
+  background-color: #444449; /* Charcoal as the back button hover color */
 }
