--- a/frontend/repl/src/styles/LoginStyle.css
+++ b/frontend/repl/src/styles/LoginStyle.css
@@ -2,9 +2,8 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #f1dabf; /* Almond as the desired background color */
+  background-color: #f3efeb; /* Almond as the desired background color */
 }
-
 .login-container {
   background-color: #faf1e8;
   padding: 20px;
