Feat: added better profile meik view

--- a/frontend/repl/src/styles/scrollComponents.css
+++ b/frontend/repl/src/styles/scrollComponents.css
@@ -7,3 +7,13 @@
 .horizontal-scroll-content {
   display: inline-block;
 }
+
+.vertical-scroll-container {
+  overflow-y: auto;
+  max-height: 100vh; /* Adjust the max height as needed */
+}
+
+.vertical-scroll-content {
+  display: flex;
+  flex-direction: column;
+}
