--- a/frontend/repl/src/styles/Header.css
+++ b/frontend/repl/src/styles/Header.css
@@ -24,6 +24,7 @@
 .logo {
   font-weight: 700;
   font-size: 3rem;
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
@@ -40,6 +41,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  cursor: pointer;
 }
 
 .nav li {
@@ -65,6 +67,7 @@
   border-bottom: 2px solid #24242a;
   padding-bottom: 12px;
   white-space: nowrap;
+  cursor: pointer;
 
   @media (max-width: 480px) {
     border: none;
