--- a/frontend/repl/src/styles/AddedPages.css
+++ b/frontend/repl/src/styles/AddedPages.css
@@ -17,11 +17,16 @@
 }
 
 .about-div {
-  height: 600px;
+  height: 650px;
   background-color: #f5eee7;
 }
 
 .join-div {
-  height: 600px;
+  height: 700px;
   background-color: #f5eee7;
+}
+
+.scrollAAA {
+  overflow-y: auto;
+  max-height: 95vh;
 }
