--- a/frontend/repl/src/styles/cardViewFirstYear.css
+++ b/frontend/repl/src/styles/cardViewFirstYear.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
   width: 350px;
   height: 175px;
   border: 1px solid #ccc;
@@ -50,4 +50,4 @@
 .Email {
   font-family: Arial, Helvetica, sans-serif;
   font-size: large;
-}
+} */
